@@ -1,5 +1,8 @@
 Release Notes
 
+* 11/10/2015
+  * changed prod/anal prokerages to use max/minrss
+
 * 11/9/2015
   * changed JG to avoid passing parallelOutMap to TB
 
